# members-agenda

./: README.md  package-lock.json  package.json
members-agenda-api/: .gitignore  README.md  docker-compose.yml  pyproject.toml
members-agenda-api/members_agenda_api/: __main__.py  api.py  dataservice.py  domain.py  validation.py
members-agenda-api/members_agenda_api/services/: __init__.py  connection.py  dataservice.py  personservice.py
members-agenda-api/sql/: members_agenda.sql
members-agenda-api/tests/: conftest.py
members-agenda-api/tests/containers/: sql_helper.py  sql_queries_parser.py
members-agenda-api/tests/containers/sql_files/: __init__.py  add-member-to-slot.sql  venues_samples.sql
members-agenda-api/tests/doc/DataService/: members_agenda_api.dataservice.get_venues-component.puml  members_agenda_api.services.dataservice.get_venues-component.puml
members-agenda-api/tests/doc/PersonService/: add_member_to_slot.43.7.200-component.puml  add_member_to_slot.44.666.404-component.puml  add_member_to_slot.44.7.500-component.puml  add_member_to_slot.44.70.201-component.puml  add_member_to_slot.47.79.500-component.puml  add_member_to_slot.99.70.404-component.puml
members-agenda-api/tests/members_agenda_api/: test_1_get_venues_envvars.py  test_1_get_venues_raw.py  test_2_get_venues_mkp.py  test_3-3_add_member_to_slot.py  test_3_get_venues_fixture.py  test_4-2_add_member_to_slot.py  test_4_add_member_to_slot.py  test_5_doctrace_add_member_to_slot.py  test_6_dataservice_markers.py  test_api.py  test_dataservice.py
members-agenda-app/: README.md  (+4 more)
(+15 files in other folders)
